# unitree-go2-edu

./: .gitignore  DEPLOY_ONBOARD.md  README.md  RUN_LIVE.md  RUN_NAV_LIVE.md  frames_2026-07-22_13.25.53.gv
deploy/: cdds_wired.xml  go2_loc_bridge.yaml  go2_nav_bridge.yaml  health_log.py  ros_env.sh  run_health.sh  run_loc_bridge.sh  run_matcher.sh  run_nav2.sh  run_nav_bridge.sh  run_pointlio.sh  run_vel_ctrl.sh
env/: cdds_laptop_wifi.xml  mola  mola_bashrc
go2_localization/: CMakeLists.txt  package.xml
go2_localization/config/: localization.yaml
go2_localization/launch/: localization.launch.py  offline_view.launch.py
go2_localization/rviz/: localization.rviz
go2_localization/src/: map_matcher_node.cpp
go2_navigation/: CMakeLists.txt  package.xml
go2_navigation/config/: localization_offline.yaml  nav2_params.yaml  slam_toolbox.yaml
go2_navigation/launch/: nav2_live.launch.py  nav2_offline.launch.py  nav2_stage4.launch.py  tf_setup.launch.py
go2_navigation/rviz/: nav2.rviz
go2_navigation/scripts/: bag_to_grid.py  calib_yaw.py  goal_to_controller.py  goal_to_planner.py
go2_sport_api/: CMakeLists.txt  vel_ctrl_repub.cpp
pipelines/: lc_manual.template.yaml  sm2mm_dense.yaml
plio2sm/: CMakeLists.txt  package.xml
plio2sm/src/: plio2sm.cpp
scripts/: candidates.py  check_revisits.py  floor_z.py  revisit_events.py  run_rviz_wifi.sh  wall_angles.py  wall_sharpness.py
