<?xml version="1.0"?>
<package format="3">
  <name>go2_localization</name>
  <version>0.1.0</version>
  <description>Map-matcher localization node: aligns Point-LIO output against a prebuilt PCD map and publishes the map->camera_init correction (tracking-only MVP, GICP/NDT).</description>
  <maintainer email="dmitriyb51@example.com">dmitriyb51</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>

  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
